network_abstractions/ingress-and-services/clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-app # лейблы в которые будет проброшен 80 порт
  type: ClusterIP
