network_abstractions/ingress-and-services/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-ngix
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-device
              port:
                number: 80
